--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
