--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.4",
